<resources>
    <string name="app_name">Whatsapp Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="whatsapp_login">Whatsapp Login</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="whatsapp_sign_up">Whatsapp Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_login_with">Or Login with</string>
    <string name="google">Google</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="profile_name">Name :</string>
    <string name="profile_email">Email :</string>
    <string name="bio">Bio :</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="contacts">Contacts</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="send">Send</string>
    <string name="type_contact_name">Type Contact Name</string>
    <string name="add">Add</string>
    <string name="new_message">New Message</string>
</resources>