<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp_login"
        android:fontFamily="@font/carter_one"
        android:textStyle="bold"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/main_text_color"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/biryani_bold"
            android:hint="@string/email"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            tools:text="Email@dsf.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/main_text_color"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/biryani_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/cantata_one"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/main_text_color"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/iv_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/google_bg"
        android:src="@drawable/ic_google"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="@id/tv1"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/google" />

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/iv_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani_bold"
            android:text="@string/don_t_have_an_account"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#98c1d9"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani_bold"
            android:text="@string/sign_up"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/text"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:background="@android:color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>