<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="20dp"
    tools:context=".ui.fragment.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:padding="5dp"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_add_profile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="37dp"
        android:src="@drawable/ic_add_dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintEnd_toEndOf="@id/civ_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/civ_profile_picture" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/civ_profile_picture" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/profile_name"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/line1"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/biryani_bold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        tools:text="Prabhkirat Singh" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        app:boxBackgroundMode="none"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/biryani_bold"
            android:inputType="textCapWords"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Prabhkirat Singh" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/profile_email"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line3"
        app:layout_constraintStart_toStartOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/biryani_bold"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        app:layout_constraintTop_toTopOf="@id/tv_email"
        tools:text="kirat@gmail.com" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/bio"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line4"
        app:layout_constraintStart_toStartOf="@id/line3"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <TextView
        android:id="@+id/tv_profile_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/biryani_bold"
        android:text="Available"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_bio"
        app:layout_constraintTop_toTopOf="@id/tv_bio" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        app:boxBackgroundMode="none"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_bio"
        app:layout_constraintTop_toTopOf="@id/tv_bio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/biryani_bold"
            android:inputType="textCapWords"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_text"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Available" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_bio" />

    <Button
        android:id="@+id/btn_update_save"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/main_bg"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/update"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4" />

</androidx.constraintlayout.widget.ConstraintLayout>